--- a/styles.css
+++ b/styles.css
@@ -201,9 +201,11 @@ html { height: 100%;}
 }
 .container{
   padding-left:10px;
+  padding-top:10px;
   position:relative;
   margin-top:100px;
-  width:50%;
+  width:100%;
+  height:100%;
   margin-left:20%;
 }
 span{
@@ -212,12 +214,18 @@ span{
 
 table{
   border:2px dashed red;
+  width:100%;
+  height:100%;
 }
 
 th{
   border:2px solid white;
+  height:30%;
 }
 
 td{
   border:2px solid white;
+  text-decoration: underline;
 }
+
+
