--- a/page.css
+++ b/page.css
@@ -1,3 +1,8 @@
+/*Group members
+
+Michael-Shane Brown - 620054354
+Denton McLaren - 620071262
+Danielle Blake - 620081194*/
 body{
   font-family: sans-serif;  
   background-image: url("http://img.hdwallpaperpc.com/cover/150/Abstract_Other_just_blue_Simple_sky_light_clean_149859_detail_thumb.jpg");
